# cfs_cli

./: Cargo.toml
src/: lib.rs  main.rs
src/commands/: cat.rs  get.rs  host_ls.rs  info.rs  load.rs  ls.rs  mkcfs.rs  mod.rs  put.rs  rm.rs  rmi.rs
src/context/: mod.rs
src/prompt/: mod.rs
