[package]
name = "cfs_cli"
description = "Complex FileSystem userspace cli"
license = "MIT"
homepage = "https://github.com/gnussy/cfs_cli"
repository = "https://github.com/gnussy/cfs_cli"
readme = "Readme.md"
documentation = "https://docs.rs/cfs_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfs = { version="0.1.0", path = "../cfs" }
